--- a/BooksStore/wwwroot/index.html
+++ b/BooksStore/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="BooksStore.styles.css" rel="stylesheet" />
     <link href="_Content/BooksStore.Blazor.Components/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
 </head>
 
 <body>
@@ -25,6 +26,8 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous">
     </script>
+    <script src="site.js"></script>
+    <script src="_Content/BooksStore.Blazor.Components/blazor-simplemde.js"></script>
 </body>
 
 </html>
