--- a/BooksStore/wwwroot/index.html
+++ b/BooksStore/wwwroot/index.html
@@ -28,6 +28,7 @@
     </script>
     <script src="site.js"></script>
     <script src="_Content/BooksStore.Blazor.Components/blazor-simplemde.js"></script>
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 </body>
 
 </html>
